<resources>
	<string name="app_name">IDLGS</string>
	<string name="home">Home</string>
	<string name="favorites">Favorites</string>
	<string name="profile">Profile</string>
	<string name="not_yet_implemented">Not yet implemented</string>
	<string name="email">Email</string>
	<string name="log_in">Log In</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="back_to_login">Back to Login</string>
	<string name="invalid_email_format">Invalid email format</string>
	<string name="reset_link_sent_to">Reset link sent to</string>
	<string name="email_not_found">Email not found</string>
	<string name="send_reset_link">Send Reset Link</string>
	<string name="about">About</string>
	<string name="you_re_logged_in">You’re logged in!</string>
	<string name="name_label">Name</string>
	<string name="email_label">Email</string>
	<string name="log_out">Log Out</string>
	<string name="settings">Settings</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="language">Language</string>
	<string name="change_language">Change language</string>
	<string name="courses_n_textbooks">Courses &amp; Textbooks</string>
	<string name="search">Search</string>
	<string name="welcome_to_idlgs_mobile">Welcome to IDLGS Mobile</string>
	<string name="successfully_logged_in">Successfully logged in</string>
	<string name="login_failed">Login failed</string>
	<string name="password_cannot_be_empty">Password cannot be empty</string>
</resources>